--- a/src/main/resources/templates/accreditamento/accreditamentoList.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoList.html
@@ -10,7 +10,7 @@
 			<div class="col-xs-12">
 				<div class="x_panel">
 					<div class="x_title">
-						<h2 th:text="${action == null} ? #{label.accreditamenti_lista} : #{label.accreditamenti_lista_gruppo(${#messages.msg('__${action}__')})}">Lista degli
+						<h2 th:text="${label == null} ? #{label.accreditamenti_lista} : #{__${label}__}">Lista degli
 							accreditamenti</h2>
 						<div class="pull-right buttons-header">
 							<a class="btn btn-primary pull-right"
