--- a/src/main/resources/templates/referee/refereeList.html
+++ b/src/main/resources/templates/referee/refereeList.html
@@ -11,6 +11,11 @@
 				<div class="x_panel">
 					<div class="x_title">
 						<h2 th:text="#{label.lista_referee}">Lista dei referee</h2>
+						<div class="pull-right buttons-header">
+							<a class="btn btn-primary pull-right"
+									th:href="@{/home}"
+									th:text="#{label.indietro}">Indietro</a>
+						</div>
 						<div class="clearfix"></div>
 					</div>
 					<div class="x_content">
