migliorie al codice (spazi superflui etc)

--- a/src/main/resources/templates/evento/eventoFragment.html
+++ b/src/main/resources/templates/evento/eventoFragment.html
@@ -388,7 +388,7 @@
 								<div class="row" style="clear: both; padding: 2px;"></div>
 								<div class="row" style="clear: both">
 									<div class="col-md-3 col-sm-3 col-xs-12"></div>
-									<div class="col-md-6 col-sm-6 col-xs-12" id="evento-professioni-select">
+									<div class="col-md-6 col-sm-6 col-xs-12">
 										<table class="professioni-discipline table table-striped table-bordered dt-responsive nowrap datatable-responsive-discipline" cellspacing="0" width="100%">
 											<thead>
 												<tr>
@@ -433,7 +433,7 @@
 		                    	<div class="row" style="clear:both; padding:2px;"></div>
 								<div class="row" style="clear:both">
 									<div class="col-md-3 col-sm-3 col-xs-12"></div>
-									<div class="col-md-6 col-sm-6 col-xs-12" id="evento-professioni-select" style="display: none;">
+									<div class="col-md-6 col-sm-6 col-xs-12" style="display: none;">
 										<table class="professioni-discipline table table-striped table-bordered dt-responsive nowrap datatable-responsive-discipline"
 											cellspacing="0" width="100%">
 											<thead>
